--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -136,6 +136,26 @@
     text-decoration: none;
   }
 
+  input[type="range"] {
+    -webkit-appearance: none;
+  }
+
+  input[type=range]::-webkit-slider-runnable-track {
+    height: 0.2rem;
+    background: pink;
+    border: 1px solid pink;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: 2px solid var(--clr-txt);
+    background-color: var(--clr-txt);
+    height: 0.9rem;
+    width: 0.9rem;
+    border-radius: 50%;
+    margin-top: -6px;
+}
+
   h1,
   h2,
   h3,
