--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -81,11 +81,11 @@
 :root {
   --clr-txt: #1a1a1a;
   --clr-pri: #412dc0;
-  --clr-sec: #282825;
+  --clr-sec: #ffffff;
   --clr-acc: #81e6d9;
 
   --clr-bg-pri: #ffffff;
-  --clr-bg-sec: #fdfdfd;
+  --clr-bg-sec: #f4e8e8;
   
   --font-head: "Raleway", sans-serif;
   --font-reg: "Source Sans Pro", sans-serif;
@@ -103,7 +103,7 @@
 :root.dark {
   --clr-txt: #ffffff;
   --clr-pri: #412dc0;
-  --clr-sec: #fdfdfd;
+  --clr-sec: #f4e8e8;
   --clr-acc: #81e6d9;
 
   --clr-bg-pri: #1a1a1a;
@@ -114,13 +114,16 @@
   :root {
     --clr-txt: #ffffff;
     --clr-pri: #412dc0;
-    --clr-sec: #fdfdfd;
+    --clr-sec: #f4e8e8;
     --clr-acc: #81e6d9;
   
     --clr-bg-pri: #1F0A29;
     --clr-bg-sec: #282825;
   }
 }
+  .dark-move {
+    transform: translate(8px);
+  }
 
   html {
     font-family: var(--font-reg);
