--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -13,8 +13,8 @@
   --fmd: clamp(1.5rem, 1.5vw, 2rem);
   --flg: clamp(1.8rem, 1.8vw, 2.4rem);
   --fxl: clamp(2.4rem, 3vw, 4rem);
-  --fxxl: clamp(3rem, 5vw, 7rem);
-  --fxxxl: clamp(4.5rem, 7vw, 8rem);
+  --fxxl: clamp(4rem, 7vw, 10rem);
+  --fxxxl: clamp(6rem, 9vw, 14rem);
 }
 
 .light {
@@ -669,9 +669,12 @@ video {
        url('/fonts/raleway-v18-latin-900.svg#Raleway') format('svg'); /* Legacy iOS */
 }
 
+* {
+  transition: background-color 0.3s ease, color 0.1s ease;
+}
+
 html {
   font-family: var(--font-reg);
-  transition: background-color 1s ease, color 1s ease;
 }
 
 body {
@@ -989,6 +992,10 @@ h1,
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-end {
   justify-content: flex-end;
 }
@@ -1105,10 +1112,6 @@ h1,
   font-size: var(--fxxl);
 }
 
-.text-xxxl {
-  font-size: var(--fxxxl);
-}
-
 .m-auto {
   margin: auto;
 }
@@ -1166,6 +1169,10 @@ h1,
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
 }
 
 .mb-1 {
@@ -1256,8 +1263,24 @@ h1,
   max-width: 36rem;
 }
 
+.max-w-2xl {
+  max-width: 42rem;
+}
+
+.max-w-4xl {
+  max-width: 56rem;
+}
+
+.max-w-5xl {
+  max-width: 64rem;
+}
+
 .max-w-full {
   max-width: 100%;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .opacity-0 {
@@ -1378,6 +1401,10 @@ h1,
 
 .pl-8 {
   padding-left: 2rem;
+}
+
+.pb-32 {
+  padding-bottom: 8rem;
 }
 
 .pointer-events-none {
@@ -1604,10 +1631,6 @@ h1,
   visibility: hidden;
 }
 
-.w-4 {
-  width: 1rem;
-}
-
 .w-6 {
   width: 1.5rem;
 }
@@ -1814,11 +1837,6 @@ h1,
   }
 }
 
-.animate-bounce {
-  -webkit-animation: bounce 1s infinite;
-          animation: bounce 1s infinite;
-}
-
 @media (min-width: 640px) {
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1884,6 +1902,11 @@ h1,
     padding-right: 3rem;
   }
 
+  .md\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
   .md\:px-24 {
     padding-left: 6rem;
     padding-right: 6rem;
@@ -1945,14 +1968,19 @@ h1,
     margin-bottom: 0px;
   }
 
-  .lg\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
+  .lg\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   .lg\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+
+  .lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 
   .lg\:grid-cols-3 {
@@ -1965,6 +1993,18 @@ h1,
 }
 
 @media (min-width: 1280px) {
+  .xl\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
+  .xl\:mb-24 {
+    margin-bottom: 6rem;
+  }
+
+  .xl\:mt-auto {
+    margin-top: auto;
+  }
+
   .xl\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
@@ -1972,12 +2012,141 @@ h1,
 }
 
 @media (min-width: 1536px) {
+  .\32xl\:inline-block {
+    display: inline-block;
+  }
+
+  .\32xl\:h-24 {
+    height: 6rem;
+  }
+
+  .\32xl\:h-56 {
+    height: 14rem;
+  }
+
+  .\32xl\:h-72 {
+    height: 18rem;
+  }
+
   .\32xl\:h-80 {
     height: 20rem;
   }
 
   .\32xl\:h-96 {
     height: 24rem;
+  }
+
+  .\32xl\:h-3\/5 {
+    height: 60%;
+  }
+
+  .\32xl\:my-3 {
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+  }
+
+  .\32xl\:my-20 {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
+
+  .\32xl\:my-32 {
+    margin-top: 8rem;
+    margin-bottom: 8rem;
+  }
+
+  .\32xl\:mr-3 {
+    margin-right: 0.75rem;
+  }
+
+  .\32xl\:mt-8 {
+    margin-top: 2rem;
+  }
+
+  .\32xl\:mb-12 {
+    margin-bottom: 3rem;
+  }
+
+  .\32xl\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
+  .\32xl\:mb-24 {
+    margin-bottom: 6rem;
+  }
+
+  .\32xl\:mb-32 {
+    margin-bottom: 8rem;
+  }
+
+  .\32xl\:p-4 {
+    padding: 1rem;
+  }
+
+  .\32xl\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .\32xl\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .\32xl\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .\32xl\:py-12 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .\32xl\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .\32xl\:px-32 {
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+
+  .\32xl\:pt-32 {
+    padding-top: 8rem;
+  }
+
+  .\32xl\:pb-80 {
+    padding-bottom: 20rem;
+  }
+
+  .\32xl\:top-12 {
+    top: 3rem;
+  }
+
+  .\32xl\:bottom-24 {
+    bottom: 6rem;
+  }
+
+  .\32xl\:right-32 {
+    right: 8rem;
+  }
+
+  .\32xl\:right-40 {
+    right: 10rem;
+  }
+
+  .\32xl\:left-40 {
+    left: 10rem;
+  }
+
+  .\32xl\:w-24 {
+    width: 6rem;
+  }
+
+  .\32xl\:w-72 {
+    width: 18rem;
   }
 
   .\32xl\:w-80 {
