--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -27,7 +27,7 @@
   --clr-acc: #81e6d9;
 
   --clr-bg-pri: #ffffff;
-  --clr-bg-sec: #f9fafb;
+  --clr-bg-sec: #e2e6eb;
 }
 
 .dark {
@@ -148,25 +148,59 @@
     text-decoration: none;
   }
 
-  input[type="range"] {
+  input[type=range] {
     -webkit-appearance: none;
+    background: transparent;
+    width: 100%;
+    cursor: pointer;
   }
 
   input[type=range]::-webkit-slider-runnable-track {
     height: 0.2rem;
-    background-color: purple;
-    border: 1px solid pink;
-}
+    background: pink;
+    width: 100%;
+  }
 
-input[type=range]::-webkit-slider-thumb {
+  input[type=range]::-moz-range-track {
+    height: 0.2rem;
+    background: pink;
+    width:100%;
+  }
+
+  input[type=range]::-ms-track {
+    height: 0.2rem;
+    background: pink;
+    width:100%;
+  }
+
+  input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
-    border: 2px solid var(--clr-txt);
-    background-color: purple;
+    border: 1px solid black;
+    background-color: white;
     height: 0.9rem;
     width: 0.9rem;
     border-radius: 50%;
     margin-top: -6px;
-}
+    cursor: pointer;
+  }
+    
+  input[type=range]::-moz-range-thumb {
+    background-color: white;
+    border: 1px solid black;
+    height: 0.9rem;
+    width: 0.9rem;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  input[type=range]::-ms-thumb {
+    background-color: white;
+    border: 1px solid black;
+    height: 0.9rem;
+    width: 0.9rem;
+    border-radius: 50%;
+    cursor: pointer;
+  }
 
   h1,
   h2,
